# artifacts/api-server/src/routes/camisetas.ts
@@ -87,6 +87,7 @@ router.get("/camisetas/:id/detalle", async (req: Request, res: Response) => {
       inventarioId: inventarioTable.id,
       talla: inventarioTable.talla,
       cantidadDisponible: inventarioTable.cantidadDisponible,
+      expuesto: inventarioTable.expuesto,
       costoUnidad: inventarioTable.costoUnidad,
       precioVenta: inventarioTable.precioVenta,
       maletaId: inventarioTable.maletaId,
@@ -115,6 +116,7 @@ router.get("/camisetas/:id/detalle", async (req: Request, res: Response) => {
       inventarioId: l.inventarioId,
       talla: l.talla,
       cantidadDisponible: l.cantidadDisponible,
+      expuesto: l.expuesto,
       costoUnidad: costo,
       precioVenta: precio,
       utilidadProyectada: utilidad,
