# lib/api-spec/openapi.yaml
@@ -1241,7 +1241,7 @@ components:
 
     DesgloseTalla:
       type: object
-      required: [inventarioId, talla, cantidadDisponible, costoUnidad, precioVenta, utilidadProyectada, codigoMaleta, maletaId, loteId]
+      required: [inventarioId, talla, cantidadDisponible, costoUnidad, precioVenta, utilidadProyectada, codigoMaleta, maletaId, loteId, expuesto]
       properties:
         inventarioId:
           type: integer
@@ -1249,6 +1249,8 @@ components:
           $ref: "#/components/schemas/Talla"
         cantidadDisponible:
           type: integer
+        expuesto:
+          type: boolean
         costoUnidad:
           type: number
         precioVenta:
